# catbox

./: AUR.md  Cargo.toml  README.md  crates.js  help.html  search-index.js  settings.html  src-files.js
.cargo/: config.toml
.github/workflows/: build-release.yml  docs.yml  make-docs.yml  release.yml  run-tests.yml
catbox/: all.html  index.html
catbox/album/: fn.add_files.html  fn.create.html  fn.delete.html  fn.edit.html  fn.remove_files.html  index.html
catbox/file/: fn.delete.html  fn.from_file.html  fn.from_url.html  index.html
catbox/litter/: fn.upload.html  index.html
search.desc/catbox/: catbox-desc-0-.js
src/: args.rs  main.rs  test.rs
src/catbox/: album.rs.html  file.rs.html  helper.rs.html  lib.rs.html  litter.rs.html
src/lib/: album.rs  file.rs  helper.rs  lib.rs  litter.rs
