[package]
name = "catbox-ng"
description = "Implementation of Catbox.moe's API"
version = "0.9.2"
edition = "2024"
homepage = "https://github.com/APT37/catbox"
repository = "https://github.com/APT37/catbox"
readme = "README.md"
documentation = "https://github.com/APT37/catbox"
license = "MIT-0"
keywords = ["api", "upload", "catbox"]
categories = ["command-line-utilities", "api-bindings"]

[lib]
name = "catbox"
path = "src/lib/lib.rs"

[[bin]]
name = "catbox"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.*"
clap = { version = "4.5.*", features = ["cargo", "env", "derive", "std"] }
futures = "0.3.*"
regex = "1.11.*"
reqwest = { version = "0.12.*", features = [
    "multipart",
    "rustls-tls",
    "stream",
] }
tokio = { version = "1.47.*", features = ["full"] }
tokio-util = { version = "0.7.*", features = ["io"] }
url = "2.5.*"

[dev-dependencies]
tempfile = "3.21.*"

[profile.dev]
opt-level = 0
debug = true
strip = false
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'unwind'
incremental = true
codegen-units = 16
rpath = false
